# kata-DictionaryPath

./: .travis.yml  CMakeLists.txt  README.md
libdictionarypath/: CMakeLists.txt
libdictionarypath/include/DictionaryPath/: Dictionary.h  DictionaryFactory.h  DictionaryPath.h
libdictionarypath/src/: DefaultDictionary.cpp  DefaultDictionary.h  DefaultDijkstraAlgorithm.cpp  DefaultDijkstraAlgorithm.h  DefaultWordsGraph.cpp  DefaultWordsGraph.h  Dictionary.cpp  DictionaryFactory.cpp  DictionaryPath.cpp  DijkstraAlgorithm.h  DijkstraAlgorithmImpl.cpp  DijkstraAlgorithmImpl.h  Graph.h  Path.cpp  Path.h  PrioritizeOverDistance.cpp  PrioritizeOverDistance.h  ShortestPathAlgorithm.h  WordsGraph.cpp  WordsGraph.h  WordsGraphAlgorithmFactory.cpp  WordsGraphAlgorithmFactory.h  WordsGraphFactory.cpp  WordsGraphFactory.h
libdictionarypath/test/: DictionaryTest.cpp  FactoryMathod.h  GraphTest.cpp  MockDictionary.cpp  MockDictionary.h  MockWordsGraph.cpp  MockWordsGraph.h  ShortestPathTest.cpp  WordsGraphTest.cpp
sample/: CMakeLists.txt
sample/src/: main.cpp
testcases/: CMakeLists.txt
testcases/src/: TestCase.cpp  TestCase.h
testcases/src/io/: InputData.h  InputDataImpl.cpp  InputDataImpl.h  OutputData.h  OutputDataImpl.cpp  OutputDataImpl.h
testcases/test/: TestCases.cpp  TestFilesPath.h.in
testcases/test_files/: 10_empty_dictionary_same_words.in  11_test.in  1_simple_test.in  2_simple_test.in  3_no_path.in  4_5000_random_3chars.in  5_start_word_missing_in_dict.in  6_end_word_missing_in_dict.in  7_duplicated_words.in  8_same_start_and_end.in  9_empty_dictionary_different_words.in  test0.in
